fix dark mode

--- a/src/scss/theme/dark/block.scss
+++ b/src/scss/theme/dark/block.scss
@@ -101,6 +101,8 @@
         .dataviewControls {
 			> .sides {
 				> .side.right {
+					.filter { color: $colorTextPrimary; }
+
 					.buttonWrap.withSelect {
 						.button.select { border-left-color: rgba(23,23,23,0.1); }
 						.button.select:after { background-image:  url('~img/arrow/button/black.svg'); }
